force-app/main/default/objects/Order/fields/AccountNameText__c.field-meta.xml
<CustomField>
    <fullName>AccountNameText__c</fullName>
    <formula>Account.Name</formula>
    <label>AccountNameText</label>
    <type>Text</type>
</CustomField>