force-app/main/default/objects/Order/fields/AccountReview__c.field-meta.xml
<CustomField>
    <fullName>AccountReview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden Field: If the Order came through B2B Storefront with the Status of Accounts Review than True.
This field is for validation on the Reference Number before progressing the Status to On Hold.</description>
    <label>AccountReview</label>
    <type>Checkbox</type>
</CustomField>