force-app/main/default/objects/Order/fields/AS400_InvoiceReference__c.field-meta.xml
<CustomField>
    <fullName>AS400_InvoiceReference__c</fullName>
    <label>Invoice Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>