force-app/main/default/objects/Order/fields/AS400_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>AS400_Order_Status__c</fullName>
    <description>Order status&apos;s coming from AS400.</description>
    <label>AS400 Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backorder</fullName>
            </value>
            <value>
                <fullName>Confirm Order</fullName>
            </value>
            <value>
                <fullName>Forward Order</fullName>
            </value>
            <value>
                <fullName>Credit Hold</fullName>
            </value>
            <value>
                <fullName>Invoice Print</fullName>
            </value>
            <value>
                <fullName>Invoice Printed</fullName>
            </value>
            <value>
                <fullName>Invoice Reprint</fullName>
            </value>
            <value>
                <fullName>Held</fullName>
            </value>
            <value>
                <fullName>D/D Print</fullName>
            </value>
            <value>
                <fullName>D/D Printed</fullName>
            </value>
            <value>
                <fullName>D/D Reprint</fullName>
            </value>
            <value>
                <fullName>D/D Shipped</fullName>
            </value>
            <value>
                <fullName>P/U Dkt Print</fullName>
            </value>
            <value>
                <fullName>P/U Dkt Printed</fullName>
            </value>
            <value>
                <fullName>P/U Dkt Sent</fullName>
            </value>
            <value>
                <fullName>P/U Dkt Reprint</fullName>
            </value>
            <value>
                <fullName>Release Pending</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Order Purge</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Proforma Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>