force-app/main/default/objects/Order/fields/AS400_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>AS400_Warehouse__c</fullName>
    <label>Warehouse</label>
    <length>50</length>
    <type>Text</type>
</CustomField>