force-app/main/default/objects/Order/fields/Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instructions__c</fullName>
    <description>Information pulled from when the Cart record through the Checkout Flow in the Storefront.</description>
    <label>Delivery Instructions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>