force-app/main/default/objects/Order/fields/Delivery_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Tracking__c</fullName>
    <description>Link to Delivery Tracking for DeTrack</description>
    <label>Delivery Tracking</label>
    <type>Url</type>
</CustomField>