force-app/main/default/objects/Order/fields/DesiredDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DesiredDeliveryDate__c</fullName>
    <description>Date pulled from the Desired Delivery Date on OrderDeliverGroup through Flow.</description>
    <label>Desired Delivery Date</label>
    <type>Date</type>
</CustomField>