force-app/main/default/objects/Order/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>This is the discount amount given due to online payment. The value is populated from the Discount Order Line Item</description>
    <label>Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>