force-app/main/default/objects/Order/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Default Order batch job uses this attribute to create order and related orderline items in a single dml transaction</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>