force-app/main/default/objects/Order/fields/OrderSummaryRecordCreated__c.field-meta.xml
<CustomField>
    <fullName>OrderSummaryRecordCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden field. Flag for Order Summary Object has been created.</description>
    <label>OrderSummaryRecordCreated</label>
    <type>Checkbox</type>
</CustomField>