force-app/main/default/objects/Order/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Updates by either the flow &apos;Update Payment Status on Order Summary and Order&apos; or through AS400 integration.</description>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Status</valueSetName>
    </valueSet>
</CustomField>