force-app/main/default/objects/Order/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>Used by the Account Receivable to Team to select the payment type and then release the Order to the Customer Service Team.</description>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>BPAY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>